# papcio-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  html.rs  main.rs  misc.rs  papcio.rs  reader.rs  styler.rs  term.rs
src/styler/: mod.rs  tag_styler.rs  toc_styler.rs
test_data/: test_file.html
